--- a/doodle-broker-starters/pom.xml
+++ b/doodle-broker-starters/pom.xml
@@ -6,15 +6,14 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.doodle</groupId>
-    <artifactId>doodle-broker-dependencies</artifactId>
+    <artifactId>doodle-broker-parent</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <relativePath>../doodle-broker-dependencies/pom.xml</relativePath>
+    <relativePath>../doodle-broker-parent/pom.xml</relativePath>
   </parent>
-  <artifactId>doodle-broker-parent</artifactId>
+  <artifactId>doodle-broker-starters</artifactId>
   <packaging>pom</packaging>
-  <properties>
-    <spotless.license-header.file>
-      ${project.basedir}/../src/checkstyle/license-header.txt
-    </spotless.license-header.file>
-  </properties>
+  <modules>
+    <module>doodle-broker-starter-server</module>
+    <module>doodle-broker-starter-vaadin</module>
+  </modules>
 </project>
