集成 design/boot BOM 依赖并添加 broker client 工程模块

--- a/doodle-broker-client-core/pom.xml
+++ b/doodle-broker-client-core/pom.xml
@@ -10,11 +10,19 @@
     <version>0.0.1-SNAPSHOT</version>
     <relativePath>../doodle-broker-parent/pom.xml</relativePath>
   </parent>
-  <artifactId>doodle-broker-starters</artifactId>
-  <packaging>pom</packaging>
-  <modules>
-    <module>doodle-broker-starter-client</module>
-    <module>doodle-broker-starter-server</module>
-    <module>doodle-broker-starter-vaadin</module>
-  </modules>
+  <artifactId>doodle-broker-client-core</artifactId>
+  <properties>
+    <spotless-maven-plugin.skip>false</spotless-maven-plugin.skip>
+  </properties>
+  <dependencies>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.doodle</groupId>
+      <artifactId>doodle-boot-core</artifactId>
+    </dependency>
+  </dependencies>
 </project>
