--- a/doodle-broker-dependencies/pom.xml
+++ b/doodle-broker-dependencies/pom.xml
@@ -22,6 +22,11 @@
       </dependency>
       <dependency>
         <groupId>org.doodle</groupId>
+        <artifactId>doodle-broker-client-core</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.doodle</groupId>
         <artifactId>doodle-broker-server-core</artifactId>
         <version>${project.version}</version>
       </dependency>
