--- a/doodle-broker-server-core/pom.xml
+++ b/doodle-broker-server-core/pom.xml
@@ -21,8 +21,8 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot</artifactId>
+      <groupId>org.doodle</groupId>
+      <artifactId>doodle-boot-core</artifactId>
     </dependency>
   </dependencies>
 </project>
