--- a/doodle-broker-server-core/pom.xml
+++ b/doodle-broker-server-core/pom.xml
@@ -24,5 +24,13 @@
       <groupId>org.doodle</groupId>
       <artifactId>doodle-boot-core</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.doodle</groupId>
+      <artifactId>doodle-design-broker</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+    </dependency>
   </dependencies>
 </project>
