--- a/doodle-broker-vaadin-core/pom.xml
+++ b/doodle-broker-vaadin-core/pom.xml
@@ -24,5 +24,9 @@
       <groupId>org.doodle</groupId>
       <artifactId>doodle-boot-core</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.doodle</groupId>
+      <artifactId>doodle-boot-vaadin-core</artifactId>
+    </dependency>
   </dependencies>
 </project>
