--- a/doodle-broker-starters/doodle-broker-starter-client/pom.xml
+++ b/doodle-broker-starters/doodle-broker-starter-client/pom.xml
@@ -24,5 +24,9 @@
       <groupId>org.doodle</groupId>
       <artifactId>doodle-broker-client-core</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-rsocket</artifactId>
+    </dependency>
   </dependencies>
 </project>
