修复添加 Broker client BOM 依赖

--- a/doodle-broker-dependencies/pom.xml
+++ b/doodle-broker-dependencies/pom.xml
@@ -27,6 +27,11 @@
       </dependency>
       <dependency>
         <groupId>org.doodle</groupId>
+        <artifactId>doodle-broker-starter-client</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.doodle</groupId>
         <artifactId>doodle-broker-server-core</artifactId>
         <version>${project.version}</version>
       </dependency>
