完善 Broker Client SpringBoot 装配和支持 Maven https

--- a/doodle-broker-autoconfigure/pom.xml
+++ b/doodle-broker-autoconfigure/pom.xml
@@ -33,5 +33,10 @@
       <artifactId>doodle-broker-vaadin-core</artifactId>
       <optional>true</optional>
     </dependency>
+    <dependency>
+      <groupId>org.doodle</groupId>
+      <artifactId>doodle-boot-rsocket-core</artifactId>
+      <optional>true</optional>
+    </dependency>
   </dependencies>
 </project>
