--- a/doodle-broker-starters/doodle-broker-starter-client/pom.xml
+++ b/doodle-broker-starters/doodle-broker-starter-client/pom.xml
@@ -25,8 +25,8 @@
       <artifactId>doodle-broker-client-core</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-rsocket</artifactId>
+      <groupId>org.doodle</groupId>
+      <artifactId>doodle-boot-starter-rsocket</artifactId>
     </dependency>
   </dependencies>
 </project>
