修复 Broker AutoConfigure Maven 依赖问题

--- a/doodle-broker-autoconfigure/pom.xml
+++ b/doodle-broker-autoconfigure/pom.xml
@@ -22,6 +22,7 @@
     <dependency>
       <groupId>org.doodle</groupId>
       <artifactId>doodle-broker-client-core</artifactId>
+      <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>org.doodle</groupId>
