RSocker Broker 组件添加 @vaadin UI 管理页面

--- a/doodle-broker-autoconfigure/pom.xml
+++ b/doodle-broker-autoconfigure/pom.xml
@@ -39,5 +39,20 @@
       <artifactId>doodle-boot-rsocket-core</artifactId>
       <optional>true</optional>
     </dependency>
+    <dependency>
+      <groupId>org.doodle</groupId>
+      <artifactId>doodle-broker-vaadin-core</artifactId>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>com.vaadin</groupId>
+      <artifactId>vaadin</artifactId>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>com.vaadin</groupId>
+      <artifactId>vaadin-spring</artifactId>
+      <optional>true</optional>
+    </dependency>
   </dependencies>
 </project>
